
SVN
-------------------------------

XML:   Resolved issue CASTOR-1642 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Switched Marshaller to use Jakarta's commons-logging for logging (adding additional
       logging statements of level warn for exceptions that so far got caught silently).
       Details: http://jira.codehaus.org/browse/CASTOR-1642
       (Werner - 20061027)

XML:   Resolved issue CASTOR-1660 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with namespace support for collections created using "container=false".
       Details: http://jira.codehaus.org/browse/CASTOR-1660
       (Werner - 20061027)

XML:   Resolved issue CASTOR-1656 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed broken code as generatd for XMLFieldHandler.resetValues() for Java 2 collections.
       Details: http://jira.codehaus.org/browse/CASTOR-1656
       (Werner - 20061025)

XML:   Resolved issue CASTOR-1646 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cyclic inheritence trees can cause srcgen to loop infinitely
       Details: http://jira.codehaus.org/browse/CASTOR-1646
       (Edward - 20061024)

XML:   Resolved issue CASTOR-1658 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up compilation complaint -- Java 5 varargs complaint
       Details: http://jira.codehaus.org/browse/CASTOR-1658
       (Edward - 20061024)

XML:   Resolved issue CASTOR-1655 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed broken code sample in XML best practice document.
       Details: http://jira.codehaus.org/browse/CASTOR-1655
       (Werner - 20061024)

XML:   Resolved issue CASTOR-1652 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Castor Source Code is created with ISO-8859-1 encoding, not UTF-8
       Details: http://jira.codehaus.org/browse/CASTOR-1652
       (Edward - 20061023)
