@@ -44,6 +44,8 @@
 
 package org.exolab.castor.builder.types;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.exolab.castor.xml.schema.SimpleType;
 import org.exolab.castor.xml.schema.Facet;
 import org.exolab.castor.types.GYear;
@@ -66,6 +68,11 @@ public class XSGYear extends XSType {
      */
     private static final JType jType
         = new JClass ("org.exolab.castor.types.GYear");
+    
+    /**
+     * Jakarta's common-logging logger
+     */
+    private static final Log LOG = LogFactory.getLog(XSGYear.class);
 
     private GYear _maxInclusive;
     private GYear _maxExclusive;
@@ -213,8 +220,7 @@ public class XSGYear extends XSType {
                     this.setMinInclusive(GYear.parseGYear(facet.getValue()));
                 //-- pattern
                 else if (Facet.PATTERN.equals(name)) {
-                    //do nothing for the moment
-                    System.out.println("Warning: The facet 'pattern' is not currently supported for XSGYear.");
+                    LOG.warn("Warning: The facet 'pattern' is not currently supported for XSGYear.");
                 }
             } catch (ParseException e) {
                 //not possible to set the facet properly
