@@ -44,6 +44,8 @@
 
 package org.exolab.castor.builder.types;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.exolab.castor.xml.schema.SimpleType;
 import org.exolab.castor.xml.schema.Facet;
 import org.exolab.castor.types.GYearMonth;
@@ -66,6 +68,11 @@ public class XSGYearMonth extends XSType {
      */
     private static final JType jType
         = new JClass ("org.exolab.castor.types.GYearMonth");
+    
+    /**
+     * Jakarta's common-logging logger
+     */
+    private static final Log LOG = LogFactory.getLog(XSGYearMonth.class);
 
     private GYearMonth _maxInclusive;
     private GYearMonth _maxExclusive;
@@ -211,8 +218,7 @@ public class XSGYearMonth extends XSType {
                     this.setMinInclusive(GYearMonth.parseGYearMonth(facet.getValue()));
                 //-- pattern
                 else if (Facet.PATTERN.equals(name)) {
-                    //do nothing for the moment
-                    System.out.println("Warning: The facet 'pattern' is not currently supported for XSGYearMonth.");
+                    LOG.warn("Warning: The facet 'pattern' is not currently supported for XSGYearMonth.");
                 }
             } catch (ParseException e) {
                 //not possible to set the facet properly
